Fix spacing on BSA advert

--- a/app/assets/stylesheets/watchlist.css.scss
+++ b/app/assets/stylesheets/watchlist.css.scss
@@ -683,8 +683,6 @@
     }
   }
   .adzone {
-    .advert {
-      margin-top: 15px;
-    }
+    margin-top: 15px;
   }
 }
